...
            android:contentDescription="Back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Percentage Calculator"
            android:textSize="@dimen/display_text_size_large"
            android:textColor="@color/text_on_display"
            android:textStyle="bold"
            android:gravity="center" />

        <View
...
